Closed Bug 482161 Opened 16 years ago Closed 16 years ago

SaveHeaderSniffer fails to save "untitled" pages in a localizable way

Categories

(Camino Graveyard :: Downloading, defect)

All
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla-graveyard, Assigned: bugzilla-graveyard)

References

()

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix v1.0 (obsolete) — Splinter Review
http://mxr.mozilla.org/mozilla/source/camino/src/download/SaveHeaderSniffer.mm#282 There's a comment in the code requesting that we localize this, so I did. Do we want to take this for 2.0?
Attachment #366233 - Flags: review?(alqahira)
Assignee: nobody → cl-bugs-new
Status: NEW → ASSIGNED
Comment on attachment 366233 [details] [diff] [review] fix v1.0 Given that an untitled document in the OS has a title of "Untitled" and a default save name suggestion of "Untitled", we should do the same thing and just use the existing string here, too. r=me with that change.
Attached patch fix v1.1Splinter Review
The previous patch didn't build because apparently macros don't like Obj-C syntax as input :-p This one builds and works as expected, and addresses Smokey's other comment.
Attachment #366233 - Attachment is obsolete: true
Attachment #366238 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #366233 - Flags: review?(alqahira)
Attachment #366238 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Comment on attachment 366238 [details] [diff] [review] fix v1.1 sr=smorgan
(In reply to comment #2) > The previous patch didn't build because apparently macros don't like Obj-C > syntax as input :-p Macros are just preprocessor string replacements, so I'm not sure what this means. Whatever problem you were having was presumably due to the fact that you were trying to use a macro designed for string literals on a method call.
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: