Bug 482161 - SaveHeaderSniffer fails to save 'untitled' page in a localizable way.  Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=me, sr=smorgan